Fixed align.

--- a/i/css/main.css
+++ b/i/css/main.css
@@ -269,5 +269,5 @@ div#nav-end a {
 }
 
 div#underconstruction {
-    align:              center;
+    text-align:              center;
 }
